Added docker without DB connection[part 1]

--- a/EP_Quest/appsettings.Production.json
+++ b/EP_Quest/appsettings.Production.json
@@ -1,4 +1,4 @@
-{
+﻿{
     "Logging": {
         "LogLevel": {
             "Default": "Information",
@@ -10,6 +10,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "QuestConnection": "Server=.;Initial Catalog=Quest;Trusted_Connection=True;MultipleActiveResultSets=True"
+        "QuestConnection": "Server=159.89.107.220,1433;Database=sql-quest;User Id=sql-quest;Password=2473483Timavoker!;Initial Catalog=Quest;Trusted_Connection=True;MultipleActiveResultSets=True"
     }
 }
