--- a/EP_Quest/appsettings.Development.json
+++ b/EP_Quest/appsettings.Development.json
@@ -1,15 +1,7 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information",
-            "Microsoft.AspNetCore.Mvc": "Information",
-            "Microsoft.EntityFrameworkCore": "Information"
-        }
-    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "QuestConnection": "Server=.;Initial Catalog=Quest;Trusted_Connection=True;MultipleActiveResultSets=True"
+        "MSSQL_Connection": "Server=localhost;Initial Catalog=quest;Trusted_Connection=True;MultipleActiveResultSets=True",
+        "PostgreSQL_Connection": "Host=localhost; Database=quest; Username=silence; Password=12345tima"
     }
 }
