--- a/EP_Quest/appsettings.Production.json
+++ b/EP_Quest/appsettings.Production.json
@@ -1,15 +1,6 @@
 ﻿{
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information",
-            "Microsoft.AspNetCore.Mvc": "Information",
-            "Microsoft.EntityFrameworkCore": "Information"
-        }
-    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "QuestConnection": "Server=159.89.107.220,1433;Database=sql-quest;User Id=sql-quest;Password=2473483Timavoker!;Initial Catalog=Quest;Trusted_Connection=True;MultipleActiveResultSets=True"
+        "PostgreSQL_Connection": "Host=localhost; Database=quest; Username=silence; Password=12345tima",
     }
 }
