--- a/EP_Quest/appsettings.Production.json
+++ b/EP_Quest/appsettings.Production.json
@@ -1,6 +1,6 @@
 ﻿{
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "PostgreSQL_Connection": "Host=localhost; Database=quest; Username=silence; Password=12345tima",
+        "PostgreSQL_Connection": "Host=localhost; Database=quest; Username=silence; Password=12345tima"
     }
 }
