--- a/EP_Quest/compilerconfig.json
+++ b/EP_Quest/compilerconfig.json
@@ -10,5 +10,17 @@
   {
     "outputFile": "Components/Note.razor.css",
     "inputFile": "Components/Note.razor.scss"
+  },
+  {
+    "outputFile": "Components/Instruction.razor.css",
+    "inputFile": "Components/Instruction.razor.scss"
+  },
+  {
+    "outputFile": "Components/Dashboard.razor.css",
+    "inputFile": "Components/Dashboard.razor.scss"
+  },
+  {
+    "outputFile": "Components/Information.razor.css",
+    "inputFile": "Components/Information.razor.scss"
   }
 ]
