--- a/EP_Quest/docker-compose.yml
+++ b/EP_Quest/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    image: peeare/ep-quest-app
     ports:
       - "80:80"
       - "443:443"
