Configure fucking-jenkins part106

--- a/EP_Quest/ci_cd/Jenkinsfile
+++ b/EP_Quest/ci_cd/Jenkinsfile
@@ -1,3 +1,15 @@
-﻿stage('someStage') {
-    // some block
+﻿pipeline {
+    agent any
+    stages {
+        stage('First step') {
+            steps {
+                sh 'First step'
+            }
+        }
+        stage('Second step') {
+            steps {
+                sh 'Second step'
+            }
+        }
+    }
 }
