--- a/EP_Quest/docker-compose.yml
+++ b/EP_Quest/docker-compose.yml
@@ -2,10 +2,11 @@
 services:
   app: 
     container_name: ep-quest
+    image: peeare/ep-quest-app:latest
+    restart: always
     build:
       context: .
       dockerfile: Dockerfile
-    image: peeare/ep-quest-app:latest
     ports:
       - "80:80"
       - "443:443"
