--- a/EP_Quest/docker-compose.yml
+++ b/EP_Quest/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     image: peeare/ep-quest-app:latest
+    restart: always
     ports:
       - "80:80"
       - "443:443"
