--- a/EP_Quest/appsettings.Development.json
+++ b/EP_Quest/appsettings.Development.json
@@ -2,5 +2,6 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "PostgreSQL_Connection": "User ID=silence;Password=12345tima;Host=localhost;Port=5432;Database=quest;"
-    }
+    },
+    "DetailedErrors": true
 }
