Resolved large file conflict

--- a/EP_Quest/appsettings.json
+++ b/EP_Quest/appsettings.json
@@ -7,5 +7,8 @@
             "Microsoft.AspNetCore.Mvc": "Information",
             "Microsoft.EntityFrameworkCore": "Information"
         }
+    },
+    "DropboxAccess": {
+        "AccessToken": "sl.BrR8uiCSaPA0t4hyG6KL-CX_9y7WO294268YOenYnI4A21-zPAGHP9MYjNMaPUXGa5Q47xLHEOBXFjdLf9enOYN-mJC-gaR9ORqb1QLruU8fufS3x7075S1SV9OG0btqg64j8DJF9-dY"
     }
 }
