--- a/EP_Quest/EP_Quest.csproj
+++ b/EP_Quest/EP_Quest.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Content Remove="compilerconfig.json" />
+    <Content Remove="wwwroot\shaders\Pass1.vertex.fx" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dropbox.Api" Version="6.37.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.25" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.25">
       <PrivateAssets>all</PrivateAssets>
@@ -42,9 +44,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
-    <PackageReference Include="Moises.Toolkit.Task.Extensions" Version="1.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.22" />
-    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -53,6 +53,7 @@
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="compilerconfig.json" />
+    <_ContentIncludedByDefault Remove="wwwroot\shaders\Pass1.vertex.fx" />
   </ItemGroup>
 
   <ItemGroup>
@@ -62,11 +63,13 @@
   <ItemGroup>
     <None Include="compilerconfig.json" />
     <None Include="wwwroot\images\fullscreen.svg" />
+    <None Include="wwwroot\shaders\Pass1.vertex.fx" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Components\Home\Internal\" />
     <Folder Include="Components\GreetingCard\Internal\" />
+    <Folder Include="wwwroot\models\" />
   </ItemGroup>
 
 </Project>
