--- a/EP_Quest/compilerconfig.json
+++ b/EP_Quest/compilerconfig.json
@@ -1,38 +1,42 @@
 ﻿[
-    {
-        "outputFile": "wwwroot/css/main.css",
-        "inputFile": "wwwroot/css/main.scss"
-    },
-    {
-        "outputFile": "Components/GreetingCard/Index.razor.css",
-        "inputFile": "Components/GreetingCard/Index.razor.scss"
-    },
-    {
-        "outputFile": "Components/Home/Index.razor.css",
-        "inputFile": "Components/Home/Index.razor.scss"
-    },
-    {
-        "outputFile": "Components/Quest/Index.razor.css",
-        "inputFile": "Components/Quest/Index.razor.scss"
-    },
-    {
-        "outputFile": "Components/Quest/Internal/Dashboard.razor.css",
-        "inputFile": "Components/Quest/Internal/Dashboard.razor.scss"
-    },
-    {
-        "outputFile": "Components/Quest/Internal/Information.razor.css",
-        "inputFile": "Components/Quest/Internal/Information.razor.scss"
-    },
-    {
-        "outputFile": "Components/Quest/Internal/Instruction.razor.css",
-        "inputFile": "Components/Quest/Internal/Instruction.razor.scss"
-    },
-    {
-        "outputFile": "Components/Quest/Internal/Quest.razor.css",
-        "inputFile": "Components/Quest/Internal/Quest.razor.scss"
-    },
-    {
-        "outputFile": "Components/Shared/Preloader.razor.css",
-        "inputFile": "Components/Shared/Preloader.razor.scss"
-    }
+  {
+    "outputFile": "wwwroot/css/main.css",
+    "inputFile": "wwwroot/css/main.scss"
+  },
+  {
+    "outputFile": "Components/GreetingCard/Index.razor.css",
+    "inputFile": "Components/GreetingCard/Index.razor.scss"
+  },
+  {
+    "outputFile": "Components/Home/Index.razor.css",
+    "inputFile": "Components/Home/Index.razor.scss"
+  },
+  {
+    "outputFile": "Components/Quest/Index.razor.css",
+    "inputFile": "Components/Quest/Index.razor.scss"
+  },
+  {
+    "outputFile": "Components/Quest/Internal/Dashboard.razor.css",
+    "inputFile": "Components/Quest/Internal/Dashboard.razor.scss"
+  },
+  {
+    "outputFile": "Components/Quest/Internal/Information.razor.css",
+    "inputFile": "Components/Quest/Internal/Information.razor.scss"
+  },
+  {
+    "outputFile": "Components/Quest/Internal/Instruction.razor.css",
+    "inputFile": "Components/Quest/Internal/Instruction.razor.scss"
+  },
+  {
+    "outputFile": "Components/Quest/Internal/Quest.razor.css",
+    "inputFile": "Components/Quest/Internal/Quest.razor.scss"
+  },
+  {
+    "outputFile": "Components/Shared/Preloader.razor.css",
+    "inputFile": "Components/Shared/Preloader.razor.scss"
+  },
+  {
+    "outputFile": "wwwroot/css/reset.css",
+    "inputFile": "wwwroot/css/reset.scss"
+  }
 ]
