--- a/EP_Quest/EP_Quest.csproj
+++ b/EP_Quest/EP_Quest.csproj
@@ -7,6 +7,12 @@
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	</PropertyGroup>
 	<ItemGroup>
+	  <Content Remove="compilerconfig.json" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Include="compilerconfig.json" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="Dropbox.Api" Version="6.37.0" />
 		<PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.25" />
