--- a/EP_Quest/compilerconfig.json
+++ b/EP_Quest/compilerconfig.json
@@ -1,19 +1,11 @@
 ﻿[
   {
-    "outputFile": "wwwroot/css/main.css",
-    "inputFile": "wwwroot/css/main.scss"
-  },
-  {
-    "outputFile": "Components/GreetingCard/Index.razor.css",
-    "inputFile": "Components/GreetingCard/Index.razor.scss"
+    "outputFile": "wwwroot/styles/main.css",
+    "inputFile": "wwwroot/styles/main.scss"
   },
   {
     "outputFile": "Components/Home/Index.razor.css",
     "inputFile": "Components/Home/Index.razor.scss"
-  },
-  {
-    "outputFile": "Components/Quest/Index.razor.css",
-    "inputFile": "Components/Quest/Index.razor.scss"
   },
   {
     "outputFile": "Components/Quest/Internal/Dashboard.razor.css",
@@ -28,19 +20,19 @@
     "inputFile": "Components/Quest/Internal/Instruction.razor.scss"
   },
   {
+    "outputFile": "Components/Quest/Internal/Progress.razor.css",
+    "inputFile": "Components/Quest/Internal/Progress.razor.scss"
+  },
+  {
     "outputFile": "Components/Quest/Internal/Quest.razor.css",
     "inputFile": "Components/Quest/Internal/Quest.razor.scss"
   },
   {
+    "outputFile": "Components/Quest/Index.razor.css",
+    "inputFile": "Components/Quest/Index.razor.scss"
+  },
+  {
     "outputFile": "Components/Shared/Preloader.razor.css",
     "inputFile": "Components/Shared/Preloader.razor.scss"
-  },
-  {
-    "outputFile": "wwwroot/css/reset.css",
-    "inputFile": "wwwroot/css/reset.scss"
-  },
-  {
-    "outputFile": "Components/Quest/Internal/Character.razor.css",
-    "inputFile": "Components/Quest/Internal/Character.razor.scss"
   }
 ]
