--- a/EP_Quest/appsettings.json
+++ b/EP_Quest/appsettings.json
@@ -7,5 +7,6 @@
             "Microsoft.AspNetCore.Mvc": "Information",
             "Microsoft.EntityFrameworkCore": "Information"
         }
-    }
+    },
+    "Result phrase": "Be like a rose, beautiful demon"
 }
