Added authorize without cookies

--- a/EP_Quest/appsettings.json
+++ b/EP_Quest/appsettings.json
@@ -8,5 +8,8 @@
             "Microsoft.EntityFrameworkCore": "Information"
         }
     },
-    "Result phrase": "Be like a rose, beautiful demon"
+    "Phrases": {
+        "Result phrase": "Be like a rose, beautiful demon",
+        "Key phrase": "phrase"
+    }
 }
