--- a/EP_Quest/EP_Quest.csproj
+++ b/EP_Quest/EP_Quest.csproj
@@ -14,6 +14,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Dropbox.Api" Version="6.37.0" />
+		<PackageReference Include="jQuery" Version="3.7.1" />
 		<PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.25" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.25">
