Added zoom and mobile adaptive

--- a/EP_Quest/appsettings.json
+++ b/EP_Quest/appsettings.json
@@ -10,6 +10,6 @@
     },
     "Phrases": {
         "Result phrase": "Be like a rose, beautiful demon",
-        "Key phrase": "phrase"
+        "Key phrase": "birthday"
     }
 }
