Added SSL certificates

--- a/EP_Quest/appsettings.json
+++ b/EP_Quest/appsettings.json
@@ -1,4 +1,15 @@
 {
+    "Kestrel": {
+        "Endpoints": {
+            "HttpsInlineCertAndKeyFile": {
+                "Url": "https://+:443",
+                "Certificate": {
+                    "Path": "Certificates/certificate.pfx",
+                    "Password": "1234tima"
+                }
+            }
+        }
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
