--- a/EP_Quest/Properties/launchSettings.json
+++ b/EP_Quest/Properties/launchSettings.json
@@ -22,7 +22,7 @@
             "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Production",
-                "ASPNETCORE_URLS": "https://+:443;http://+:80"
+                "ASPNETCORE_URLS": "https://+:443"
             },
             "publishAllPorts": true,
             "useSSL": true
