--- a/EP_Quest/appsettings.json
+++ b/EP_Quest/appsettings.json
@@ -4,7 +4,7 @@
             "HttpsInlineCertAndKeyFile": {
                 "Url": "https://+:443",
                 "Certificate": {
-                    "Path": "Certificates/certificate.pfx",
+                    "Path": "certificate.pfx",
                     "Password": "1234tima"
                 }
             }
