--- a/EP_Quest/appsettings.json
+++ b/EP_Quest/appsettings.json
@@ -19,6 +19,10 @@
             "Microsoft.EntityFrameworkCore": "Information"
         }
     },
+    "TelegramMessaging": {
+        "ChatId": "-1001816953224",
+        "TelegramToken": "6924658351:AAFJFBoVRMzJUn19ToIbDQPtI3prmH3rZHU"
+    },
     "Phrases": {
         "Result phrase": "Be like a rose, beautiful demon",
         "Key phrase": "birthday"
